After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 581776 - [card themes] invalid XML IDs
[card themes] invalid XML IDs
Status: RESOLVED FIXED
Product: aisleriot
Classification: Other
Component: general
pre-3.0
Other All
: Normal minor
: ---
Assigned To: aisleriot-maint
aisleriot-maint
Depends on:
Blocks:
 
 
Reported: 2009-05-07 18:17 UTC by Christian Persch
Modified: 2011-10-05 20:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Persch 2009-05-07 18:17:40 UTC
Unfortunately it turns out that the ID names I chose for the cards in the SVG files are not valid xml IDs, since they start with a number ("1_club", etc.). So validating the files with xmllint fails.

This bug is just a reminder to fix this the next time we change theme formats / directories.
Comment 1 Christian Persch 2011-04-25 12:05:53 UTC
Mass-moving only open aisleriot bugs to the new product. Search for "aisleriot-mass-move" to filter them.
Comment 2 Christian Persch 2011-10-05 20:10:57 UTC
Fixed on master.