cards: Make XML IDs valid

https://bugzilla.gnome.org/show_bug.cgi?id=581776